Added reference to main project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /EsrInterpreter/EsrInterpreter/bin
 /EsrInterpreter/EsrInterpreter/obj
 /EsrInterpreter/EsriTests/obj
+/EsrInterpreter/EsriTests/bin
