--- a/EsrInterpreter/EsriTests/EsriTests.csproj
+++ b/EsrInterpreter/EsriTests/EsriTests.csproj
@@ -22,4 +22,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\EsrInterpreter\EsrInterpreter.csproj" />
+    </ItemGroup>
+
 </Project>
